# twain-samples

TWAIN-Samples/Twain_DS_sample01/src/: CMakeLists.txt
